--- a/Labs/03/task_3.html
+++ b/Labs/03/task_3.html
@@ -19,6 +19,27 @@
         <br>
 
         <label for="question"><u>How did you hear about our CV Creator Tool?</u></label>
+        <select name="question" id="question">
+            <option value="linlkedin">LinkedIn</option>
+            <option value="facebook">Facebook</option>
+            <option value="skype">Skype</option>
+        </select>
+        <br>
+        
+        <input type="radio" name="newsletter" id="newsletter">
+        <label for="newsletter"><u><b>Sign up for the newsletter</b></u></label>
+        <br>
+
+        <legend for="second_question"><b><i>Would you use this CV Creator Tool again?</i></b></legend>
+        <input type="radio" name="yes" id="yes">
+        <label for="yes">Yes</label>
+        <br>
+        <input type="radio" name="no" id="no">
+        <label for="no">NOOOOOOOOO</label>
+        <br>
+        <input type="radio" name="maybe" id="maybe">
+        <label for="maybe">MAYBEEEEEEEEEE</label>
+
     </form>
 </body>
 </html>
