Last push for task 03

--- a/Labs/03/task_4.html
+++ b/Labs/03/task_4.html
@@ -88,5 +88,18 @@
         <br>
         <textarea name="personal_projects" id="personal_projects"></textarea>
     </fieldset>
+    <br>
+
+    <button class="submit" type="submit">Submit CV</button>
+
+    <style>
+        .submit {
+            color: white;
+            background-color: green;
+            border: none;
+            padding: 50px;
+            border-radius: 50px;
+        }
+    </style>
 </body>
 </html>
